--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-fileSet2 = "C:/Users/Kasia/Desktop/"
-serverFilesUrl = http://zad-opwo.com/download
+fileSet2 = C:/Users/Kasia/Desktop/CV/
+serverFilesUrl2 = http://zad-opwo.com/download
 outputFile2 = zad-opwo.xml
